[package]
name = "libpwquality-sys"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Native bindings to the libpwquality library"
repository = "https://github.com/nibon7/libpwquality-rs"
links = "pwquality"
build = "build.rs"
exclude = [
  "libpwquality/doc/*",
  "libpwquality/po/*",
  "libpwquality/python/*",
  "cracklib/words/*",
]

[package.metadata.docs.rs]
features = ["vendored"]
rustc-args = ["--cfg", "docsrs"]

[lib]
name = "libpwquality_sys"
path = "lib.rs"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3.27"

[features]
vendored = []
