[package]
name = "libpwquality-sys"
version = "0.5.3"
edition = "2021"
license = "GPL-2.0-or-later"
description = "Native bindings to the libpwquality library"
repository = "https://github.com/nibon7/libpwquality-rs"
links = "pwquality"
build = "build.rs"
include = [
  "build.rs",
  "lib.rs",
  "cracklib/src/lib/*.c",
  "cracklib/src/lib/*.h",
  "libpwquality/src/*.c",
  "libpwquality/src/*.h",
  "!libpwquality/src/pam_pwquality.c",
  "!libpwquality/src/pwmake.c",
  "!libpwquality/src/pwscore.c"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.system-deps.pwquality]
version = "1.0.0"
v1_2 = { version = "1.2.0" }
v1_3 = { version = "1.3.0" }
v1_4 = { version = "1.4.0" }
v1_4_1 = { version = "1.4.1" }
v1_4_3 = { version = "1.4.3" }
v1_4_5 = { version = "1.4.5" }

[lib]
name = "libpwquality_sys"
path = "lib.rs"

[features]
v1_0 = []
v1_2 = ["v1_0"]
v1_3 = ["v1_2"]
v1_4 = ["v1_3"]
v1_4_1 = ["v1_4"]
v1_4_3 = ["v1_4_1"]
v1_4_5 = ["v1_4_3"]
vendored = []

[build-dependencies]
bindgen = "0.70.1"
system-deps = "7.0.2"
cc = "1.1.21"
