[package]
name = "libpwquality-sys"
version = "0.6.1"
edition = "2021"
license = "GPL-2.0-or-later"
description = "Native bindings to the libpwquality library"
repository = "https://github.com/nibon7/libpwquality-rs"
links = "pwquality"
build = "build.rs"
include = [
  "build.rs",
  "lib.rs",
  "cracklib/src/lib/*.c",
  "cracklib/src/lib/*.h",
  "libpwquality/src/*.c",
  "libpwquality/src/*.h",
  "!libpwquality/src/pam_pwquality.c",
  "!libpwquality/src/pwmake.c",
  "!libpwquality/src/pwscore.c"
]

[package.metadata.docs.rs]
features = ["vendored-cracklib"]

[lib]
name = "libpwquality_sys"
path = "lib.rs"

[features]
v1_0 = []
v1_2 = ["v1_0"]
v1_3 = ["v1_2"]
v1_4 = ["v1_3"]
v1_4_1 = ["v1_4"]
v1_4_3 = ["v1_4_1"]
v1_4_5 = ["v1_4_3"]
vendored = []
vendored-cracklib = ["vendored"]

[build-dependencies]
bindgen = "0.70.1"
pkg-config = "0.3.31"
cc = "1.1.21"
