[package]
name = "libpwquality"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "libpwquality bindings for Rust"
repository = "https://github.com/nibon7/libpwquality-rs"
readme = "../README.md"
categories = ["api-bindings"]
keywords = [
  "password",
  "pwquality"
]
exclude = [
  "tests/*"
]

[package.metadata.docs.rs]
features = ["vendored"]

[dependencies]
libpwquality-sys = { path = "../libpwquality-sys", version = "0.3.0", default-features = false }
libc = "0.2"

[dev-dependencies]
serial_test = { version = "1.0", default-features = false }

[features]
vendored = ["libpwquality-sys/vendored"]
