[package]
name = "libpwquality"
version = "0.9.0"
edition = "2021"
license = "GPL-2.0-or-later"
description = "libpwquality bindings for Rust"
repository = "https://github.com/nibon7/libpwquality-rs"
readme = "../README.md"
categories = ["api-bindings"]
keywords = [
  "password",
  "pwquality"
]
exclude = [
  "tests/*"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["v1_0"]
v1_0 = ["libpwquality-sys/v1_0"]
v1_2 = ["v1_0", "libpwquality-sys/v1_2"]
v1_3 = ["v1_2", "libpwquality-sys/v1_3"]
v1_4 = ["v1_3", "libpwquality-sys/v1_4"]
v1_4_1 = ["v1_4", "libpwquality-sys/v1_4_1"]
v1_4_3 = ["v1_4_1", "libpwquality-sys/v1_4_3"]
v1_4_5 = ["v1_4_3", "libpwquality-sys/v1_4_5"]
vendored = ["libpwquality-sys/vendored"]
vendored-cracklib = ["vendored", "libpwquality-sys/vendored-cracklib"]

[dependencies]
libpwquality-sys = { path = "../libpwquality-sys", version = "0.6.0", default-features = false }
libc = "0.2"
paste = "1.0.15"

[dev-dependencies]
serial_test = { version = "3.0", default-features = false }
